--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
+<!DOCTYPE html>
 <html>
-<header>
+  <head>
+    <meta charset="utf-8">
+    <title>Parrot</title>
+    <!-- change this up! http://www.bootstrapcdn.com/bootswatch/ -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/cosmo/bootstrap.min.css" type="text/css" rel="stylesheet"/>
+  </head>
 
-</header>
-<body>
-    <h3>hello world</h3>
-</body>
+  <body>
+    <div id="app"></div>
+    <script src="/static/client.min.js"></script>
+  </body>
 </html>
